[tool.poetry]
name = "sphinx_gherkindoc"
version = "3.4.3"
description = "A tool to convert Gherkin into Sphinx documentation"
authors = ["Lewis Franklin <lewis.franklin@gmail.com>", "Doug Philips <dgou@mac.com>"]
readme = "README.rst"
homepage = "https://jolly-good-toolbelt.github.io/sphinx_gherkindoc/"
documentation = "https://jolly-good-toolbelt.github.io/sphinx_gherkindoc/"
repository = "https://github.com/jolly-good-toolbelt/sphinx_gherkindoc"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Sphinx = ">=1.3"
sphinx_rtd_theme = ">=0.3.1"
behave = ">=1.2.6"
recommonmark = ">=0.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^1.15"
ghp-import = "^0.5.5"
tomlkit = "^0.5.3"
sphinx-autodoc-typehints = "^1.6"
pytest = "^4.6"
# branch: scenario-descriptions
# This branch is still active, so we lock to a specific commit in the branch
# to prevent unexpected issues if that branch is pushed to.
pytest-bdd = {git = "https://github.com/rbcasperson/pytest-bdd.git", rev = "684c5dde75d0e8c7dacddd81fbb7cd93bd4f46d2"}
pytest-cov = "^2.7"

[tool.poetry.scripts]
sphinx-gherkindoc = 'sphinx_gherkindoc.cli:main'
sphinx-gherkinconfig = 'sphinx_gherkindoc.cli:config'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
