[tool.poetry]
name = "sphinx_gherkindoc"
version = "3.5.1"
description = "A tool to convert Gherkin into Sphinx documentation"
authors = ["Lewis Franklin <lewis.franklin@gmail.com>", "Doug Philips <dgou@mac.com>"]
readme = "README.rst"
homepage = "https://jolly-good-toolbelt.github.io/sphinx_gherkindoc/"
documentation = "https://jolly-good-toolbelt.github.io/sphinx_gherkindoc/"
repository = "https://github.com/jolly-good-toolbelt/sphinx_gherkindoc"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Sphinx = ">=1.3"
sphinx_rtd_theme = ">=0.3.1"
behave = ">=1.2.6"
recommonmark = ">=0.4.0"
typing_extensions = { version = "^3.7.4", python = "<3.8" }

[tool.poetry.dev-dependencies]
pre-commit = "^1.15"
ghp-import = "^0.5.5"
tomlkit = "^0.5.3"
sphinx-autodoc-typehints = "^1.6"
pytest = "^4.6"
# branch: scenario-descriptions
# This branch is still active, so we lock to a specific commit in the branch
# to prevent unexpected issues if that branch is pushed to.
pytest-bdd = {git = "https://github.com/rbcasperson/pytest-bdd.git", rev = "b3d464bef1af2accbef493c6be85fc6232c318ed"}
pytest-cov = "^2.7"

[tool.poetry.scripts]
sphinx-gherkindoc = 'sphinx_gherkindoc.cli:main'
sphinx-gherkinconfig = 'sphinx_gherkindoc.cli:config'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
